--- a/src/pages/Main/s.module.scss
+++ b/src/pages/Main/s.module.scss
@@ -1,3 +1,26 @@
+@use 'styles/media-queries' as *;
+
+.mainPage {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  padding: 0px 34px;
+  position: relative;
+
+  @include media($tablet-l) {
+    padding: 0px 17px;
+  }
+  @include media(634px) {
+    padding: 0px;
+  }
+}
 .topBannerWrapper {
   margin-top: 54px;
+  position: absolute;
+  width: 100%;
+  left: 0;
+}
+
+.blackFridayBannerWrapper {
+  margin: 200px 0px 0px auto;
 }
