--- a/src/widgets/BlackFridayBanner/s.module.scss
+++ b/src/widgets/BlackFridayBanner/s.module.scss
@@ -60,6 +60,11 @@
   font-size: 40px;
   letter-spacing: -1.6px;
   margin-bottom: 14px;
+  background: linear-gradient(45deg, #7d5317, #eddf95);
+  display: block;
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
+  background-clip: text;
 }
 
 .code {
