--- a/src/pages/Main/s.module.scss
+++ b/src/pages/Main/s.module.scss
@@ -22,5 +22,27 @@
 }
 
 .blackFridayBannerWrapper {
-  margin: 200px 0px 0px auto;
+  margin: 600px 0px 0px auto;
+  right: 34px;
+  position: absolute;
+  transform: translateX(150%);
+  visibility: hidden;
+  transition:
+    transform 0.6s ease 0.3s,
+    visibility 0.6s ease 0.6s;
+
+  @include media($tablet-l) {
+    right: 17px;
+  }
+  @include media(634px) {
+    right: 0;
+  }
+}
+
+.showBanner {
+  transform: translateX(0);
+  visibility: visible;
+  transition:
+    transform 0.6s ease 0.3s,
+    visibility 0.1s ease;
 }
