--- a/src/widgets/BlackFridayBanner/s.module.scss
+++ b/src/widgets/BlackFridayBanner/s.module.scss
@@ -9,10 +9,6 @@
   box-shadow: 0px 4px 34px 0px rgba(0, 0, 0, 0.45);
   overflow: hidden;
 
-  @include media(634px) {
-    position: absolute;
-    right: 0px;
-  }
   @include media(600px) {
     border-radius: 0px;
   }
@@ -39,6 +35,7 @@
   position: absolute;
   right: 12px;
   top: 12px;
+  cursor: pointer;
 }
 
 .title,
